[package]
name = "example"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rbs = "4.5"
rbdc-pool-fast= "4.5"
#rbdc-pool-mobc = "4.5"
rbdc = { version = "4.5", default-features = false }
rbdc-dameng={path="../rbdc-dameng"}
rbdc-mysql = { version = "4.5" }
rbdc-sqlite = { version = "4.5" }
#rbdc-pg={version="4.5", default-features = false, features = ["tls-native-tls"]}
#rbdc-mssql={version="4.5", default-features = false, features = ["tls-native-tls"]}
rbatis = { version = "4.5" , features=["debug_mode"] }
#rbatis = { version = "4.5"}
dark-std="0.2.15"
serde_json = "1"
fastdate = { version = "0.3" }
bigdecimal = { version = "0.4", features = ["serde"] }
log = "0.4.2"
fast_log = "1.5"
tokio = { version = "1.12", features = ["full"] }
chrono = "0.4.19"

[[bin]]
name = "test-dameng"
path = "src/main.rs"