[package]
name = "rbdc-dameng"
version = "0.1.0"
edition = "2021"

[dependencies]
rbs = "4.5"
rbdc = "4.5"
odbc-api = "10.1"
serde = "1"
serde_json = "1"
futures-io = { version = "0.3", features = ["std"] }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", features = ["alloc", "sink"] }
chrono = "0.4"
rust_decimal = "1"
byteorder = "1.5"
log = "0.4"
bigdecimal = { version = "0.4.0", features = ["serde"] }
tokio = { version = "1", features = ["fs", "net", "rt", "rt-multi-thread", "time", "io-util", "test-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

anyhow = "1.0"
#thiserror = "2.0"
once_cell = "1.20"
fastdate = "0.3"
clap = { version = "4", features = ["derive"] }
crossbeam-queue = "0.3"
#connection-string = "0.2"
url = "2"

[dev-dependencies]
fast_log = "1.7"

